Week8/y.output
State 143 conflicts: 8 shift/reduce
State 144 conflicts: 8 shift/reduce
State 160 conflicts: 2 shift/reduce
State 178 conflicts: 2 reduce/reduce


Grammar

    0 $accept: prm $end

    1 $@1: %empty

    2 prm: HEADERS MAIN_TYPE MAIN LB RB LCB $@1 BODY RCB

    3 HEADERS: HEADER HEADERS
    4        | HEADER

    5 HEADER: HASH INCLUDE LT HEADER_FILE GT
    6       | HASH INCLUDE DQUOTE HEADER2 HEADER_FILE DQUOTE

    7 HEADER2: HEADER2 VAR DIV
    8        | DIV
    9        | %empty

   10 BODY: DECLARATION_STATEMENTS BODY2

   11 BODY2: %empty
   12      | DECLARATION_STATEMENTS BODY2
   13      | PROGRAM_STATEMENTS BODY2

   14 DECLARATION_STATEMENTS: DATA_TYPE VAR_LIST SC
   15                       | WRITE_STATEMENT

   16 VAR_LIST: VAR COMA VAR_LIST
   17         | ARRAY_DECLARATION COMA VAR_LIST
   18         | PTR_VAR COMA VAR_LIST
   19         | VAR_LIST2 COMA VAR_LIST
   20         | VAR
   21         | ARRAY_DECLARATION
   22         | PTR_VAR
   23         | VAR_LIST2

   24 VAR_LIST2: VAR EQ A_EXPN

   25 PTR_VAR: PTR_DEPTH VAR

   26 PTR_DEPTH: MUL PTR_DEPTH
   27          | MUL

   28 ARRAY_DECLARATION: VAR ARRAY_SIZE

   29 ARRAY_SIZE: ARRAY_SIZE LSQRB INT_NUMBER RSQRB
   30           | LSQRB INT_NUMBER RSQRB

   31 MAIN_TYPE: INT

   32 DATA_TYPE: INT
   33          | CHAR
   34          | FLOAT
   35          | DOUBLE

   36 PROGRAM_STATEMENTS: ASSIGNMENT_STATEMENT SC
   37                   | SC
   38                   | READ_STATEMENT
   39                   | INCR_DCR_EXPN SC

   40 $@2: %empty

   41 $@3: %empty

   42 $@4: %empty

   43 PROGRAM_STATEMENTS: LB LOGICAL_EXPN RB QMARK LCB $@2 BODY2 RCB $@3 COLON LCB $@4 BODY2 RCB
   44                   | CONDITIONAL_STATEMENTS

   45 $@5: %empty

   46 PROGRAM_STATEMENTS: WHILE LB LOGICAL_EXPN RB LCB $@5 BODY2 RCB

   47 $@6: %empty

   48 $@7: %empty

   49 PROGRAM_STATEMENTS: DO LCB $@6 BODY2 RCB $@7 WHILE LB LOGICAL_EXPN RB SC

   50 $@8: %empty

   51 PROGRAM_STATEMENTS: FOR LB ASSIGNMENT_STATEMENT SC LOGICAL_EXPN SC INCR_DCR_EXPN RB LCB $@8 BODY2 RCB

   52 $@9: %empty

   53 WRITE_STATEMENT: PRINTF LB Q_STRING $@9 RB SC

   54 $@10: %empty

   55 WRITE_STATEMENT: PRINTF LB Q_STRING $@10 COMA VAR_LIST_OP RB SC

   56 VAR_LIST_OP: A_EXPN COMA VAR_LIST_OP
   57            | A_EXPN

   58 $@11: %empty

   59 READ_STATEMENT: SCANF LB Q_STRING $@11 COMA VAR_LIST_IP RB SC

   60 VAR_LIST_IP: A_EXPN COMA VAR_LIST_IP
   61            | A_EXPN

   62 CONDITIONAL_STATEMENTS: IF_STATEMENT
   63                       | IF_STATEMENT ELSE_STATEMENT
   64                       | IF_STATEMENT ELSE_IF_STATEMENT
   65                       | IF_STATEMENT ELSE_IF_STATEMENT ELSE_STATEMENT

   66 $@12: %empty

   67 IF_STATEMENT: IF LB LOGICAL_EXPN RB LCB $@12 BODY2 RCB

   68 $@13: %empty

   69 ELSE_IF_STATEMENT: ELSE_IF LB LOGICAL_EXPN RB LCB $@13 BODY2 RCB

   70 $@14: %empty

   71 ELSE_IF_STATEMENT: ELSE_IF_STATEMENT ELSE_IF LB LOGICAL_EXPN RB LCB $@14 BODY2 RCB

   72 $@15: %empty

   73 ELSE_STATEMENT: ELSE LCB $@15 BODY2 RCB

   74 ASSIGNMENT_STATEMENT: A_EXPN EQ A_EXPN

   75 LOGICAL_EXPN: NOT LB LOGICAL_EXPN1 RB
   76             | LOGICAL_EXPN1

   77 LOGICAL_EXPN1: LOGICAL_EXPN1 LOGICAL_OPERATOR LOGICAL_EXPN1
   78              | LOGICAL_EXPN2
   79              | NOT LB LOGICAL_EXPN1 RB
   80              | LB LOGICAL_EXPN1 RB

   81 LOGICAL_EXPN2: A_EXPN COMP_OPERATOR A_EXPN

   82 COMP_OPERATOR: ET
   83              | GT
   84              | LT
   85              | GTE
   86              | LTE
   87              | NE

   88 LOGICAL_OPERATOR: AMPER AMPER
   89                 | OR

   90 A_EXPN: A_EXPN OPR_PREC1 A_EXPN
   91       | A_EXPN OPR_PREC2 A_EXPN
   92       | LB A_EXPN RB
   93       | INCR_DCR_EXPN
   94       | VAR
   95       | INT_NUMBER
   96       | FLOAT_NUMBER
   97       | MUL A_EXPN
   98       | ARRAY_ACCESS
   99       | AMPER A_EXPN

  100 ARRAY_ACCESS: ARRAY_ACCESS LSQRB A_EXPN RSQRB
  101             | VAR LSQRB A_EXPN RSQRB

  102 INCR_DCR_EXPN: A_EXPN UNARY_OPERATORS

  103 UNARY_OPERATORS: UPLUS
  104                | UMINUS

  105 OPR_PREC1: PLUS
  106          | MINUS

  107 OPR_PREC2: DIV
  108          | MUL
  109          | EXP
  110          | MOD


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    HASH (258) 5 6
    INCLUDE (259) 5 6
    HEADER_FILE (260) 5 6
    MAIN (261) 2
    LB (262) 2 43 46 49 51 53 55 59 67 69 71 75 79 80 92
    RB (263) 2 43 46 49 51 53 55 59 67 69 71 75 79 80 92
    LCB (264) 2 43 46 49 51 67 69 71 73
    RCB (265) 2 43 46 49 51 67 69 71 73
    LSQRB (266) 29 30 100 101
    RSQRB (267) 29 30 100 101
    SC (268) 14 36 37 39 49 51 53 55 59
    COLON (269) 43
    QMARK (270) 43
    COMA (271) 16 17 18 19 55 56 59 60
    IF (272) 67
    ELSE_IF (273) 69 71
    ELSE (274) 73
    FOR (275) 51
    DO (276) 49
    WHILE (277) 46 49
    PRINTF (278) 53 55
    SCANF (279) 59
    ET (280) 82
    EQ (281) 24 74
    GT (282) 5 83
    LT (283) 5 84
    GTE (284) 85
    LTE (285) 86
    NE (286) 87
    AMPER (287) 88 99
    OR (288) 89
    NOT (289) 75 79
    DQUOTE (290) 6
    PLUS (291) 105
    MINUS (292) 106
    MUL (293) 26 27 97 108
    DIV (294) 7 8 107
    MOD (295) 110
    EXP (296) 109
    UPLUS (297) 103
    UMINUS (298) 104
    INT <data_type> (299) 31 32
    CHAR <data_type> (300) 33
    FLOAT <data_type> (301) 34
    DOUBLE <data_type> (302) 35
    VAR <var_name> (303) 7 16 20 24 25 28 94 101
    INT_NUMBER <integer_val> (304) 29 30 95
    FLOAT_NUMBER <float_val> (305) 96
    Q_STRING <q_string> (306) 53 55 59


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    prm (53)
        on left: 2
        on right: 0
    $@1 (54)
        on left: 1
        on right: 2
    HEADERS (55)
        on left: 3 4
        on right: 2 3
    HEADER (56)
        on left: 5 6
        on right: 3 4
    HEADER2 (57)
        on left: 7 8 9
        on right: 6 7
    BODY (58)
        on left: 10
        on right: 2
    BODY2 (59)
        on left: 11 12 13
        on right: 10 12 13 43 46 49 51 67 69 71 73
    DECLARATION_STATEMENTS (60)
        on left: 14 15
        on right: 10 12
    VAR_LIST (61)
        on left: 16 17 18 19 20 21 22 23
        on right: 14 16 17 18 19
    VAR_LIST2 (62)
        on left: 24
        on right: 19 23
    PTR_VAR (63)
        on left: 25
        on right: 18 22
    PTR_DEPTH (64)
        on left: 26 27
        on right: 25 26
    ARRAY_DECLARATION (65)
        on left: 28
        on right: 17 21
    ARRAY_SIZE (66)
        on left: 29 30
        on right: 28 29
    MAIN_TYPE (67)
        on left: 31
        on right: 2
    DATA_TYPE <data_type> (68)
        on left: 32 33 34 35
        on right: 14
    PROGRAM_STATEMENTS (69)
        on left: 36 37 38 39 43 44 46 49 51
        on right: 13
    $@2 (70)
        on left: 40
        on right: 43
    $@3 (71)
        on left: 41
        on right: 43
    $@4 (72)
        on left: 42
        on right: 43
    $@5 (73)
        on left: 45
        on right: 46
    $@6 (74)
        on left: 47
        on right: 49
    $@7 (75)
        on left: 48
        on right: 49
    $@8 (76)
        on left: 50
        on right: 51
    WRITE_STATEMENT (77)
        on left: 53 55
        on right: 15
    $@9 (78)
        on left: 52
        on right: 53
    $@10 (79)
        on left: 54
        on right: 55
    VAR_LIST_OP (80)
        on left: 56 57
        on right: 55 56
    READ_STATEMENT (81)
        on left: 59
        on right: 38
    $@11 (82)
        on left: 58
        on right: 59
    VAR_LIST_IP (83)
        on left: 60 61
        on right: 59 60
    CONDITIONAL_STATEMENTS (84)
        on left: 62 63 64 65
        on right: 44
    IF_STATEMENT (85)
        on left: 67
        on right: 62 63 64 65
    $@12 (86)
        on left: 66
        on right: 67
    ELSE_IF_STATEMENT (87)
        on left: 69 71
        on right: 64 65 71
    $@13 (88)
        on left: 68
        on right: 69
    $@14 (89)
        on left: 70
        on right: 71
    ELSE_STATEMENT (90)
        on left: 73
        on right: 63 65
    $@15 (91)
        on left: 72
        on right: 73
    ASSIGNMENT_STATEMENT (92)
        on left: 74
        on right: 36 51
    LOGICAL_EXPN (93)
        on left: 75 76
        on right: 43 46 49 51 67 69 71
    LOGICAL_EXPN1 (94)
        on left: 77 78 79 80
        on right: 75 76 77 79 80
    LOGICAL_EXPN2 (95)
        on left: 81
        on right: 78
    COMP_OPERATOR (96)
        on left: 82 83 84 85 86 87
        on right: 81
    LOGICAL_OPERATOR (97)
        on left: 88 89
        on right: 77
    A_EXPN <EXPN_type> (98)
        on left: 90 91 92 93 94 95 96 97 98 99
        on right: 24 56 57 60 61 74 81 90 91 92 97 99 100 101 102
    ARRAY_ACCESS <EXPN_type> (99)
        on left: 100 101
        on right: 98 100
    INCR_DCR_EXPN <EXPN_type> (100)
        on left: 102
        on right: 39 51 93
    UNARY_OPERATORS (101)
        on left: 103 104
        on right: 102
    OPR_PREC1 (102)
        on left: 105 106
        on right: 90
    OPR_PREC2 (103)
        on left: 107 108 109 110
        on right: 91


State 0

    0 $accept: . prm $end

    HASH  shift, and go to state 1

    prm      go to state 2
    HEADERS  go to state 3
    HEADER   go to state 4


State 1

    5 HEADER: HASH . INCLUDE LT HEADER_FILE GT
    6       | HASH . INCLUDE DQUOTE HEADER2 HEADER_FILE DQUOTE

    INCLUDE  shift, and go to state 5


State 2

    0 $accept: prm . $end

    $end  shift, and go to state 6


State 3

    2 prm: HEADERS . MAIN_TYPE MAIN LB RB LCB $@1 BODY RCB

    INT  shift, and go to state 7

    MAIN_TYPE  go to state 8


State 4

    3 HEADERS: HEADER . HEADERS
    4        | HEADER .

    HASH  shift, and go to state 1

    $default  reduce using rule 4 (HEADERS)

    HEADERS  go to state 9
    HEADER   go to state 4


State 5

    5 HEADER: HASH INCLUDE . LT HEADER_FILE GT
    6       | HASH INCLUDE . DQUOTE HEADER2 HEADER_FILE DQUOTE

    LT      shift, and go to state 10
    DQUOTE  shift, and go to state 11


State 6

    0 $accept: prm $end .

    $default  accept


State 7

   31 MAIN_TYPE: INT .

    $default  reduce using rule 31 (MAIN_TYPE)


State 8

    2 prm: HEADERS MAIN_TYPE . MAIN LB RB LCB $@1 BODY RCB

    MAIN  shift, and go to state 12


State 9

    3 HEADERS: HEADER HEADERS .

    $default  reduce using rule 3 (HEADERS)


State 10

    5 HEADER: HASH INCLUDE LT . HEADER_FILE GT

    HEADER_FILE  shift, and go to state 13


State 11

    6 HEADER: HASH INCLUDE DQUOTE . HEADER2 HEADER_FILE DQUOTE

    DIV  shift, and go to state 14

    $default  reduce using rule 9 (HEADER2)

    HEADER2  go to state 15


State 12

    2 prm: HEADERS MAIN_TYPE MAIN . LB RB LCB $@1 BODY RCB

    LB  shift, and go to state 16


State 13

    5 HEADER: HASH INCLUDE LT HEADER_FILE . GT

    GT  shift, and go to state 17


State 14

    8 HEADER2: DIV .

    $default  reduce using rule 8 (HEADER2)


State 15

    6 HEADER: HASH INCLUDE DQUOTE HEADER2 . HEADER_FILE DQUOTE
    7 HEADER2: HEADER2 . VAR DIV

    HEADER_FILE  shift, and go to state 18
    VAR          shift, and go to state 19


State 16

    2 prm: HEADERS MAIN_TYPE MAIN LB . RB LCB $@1 BODY RCB

    RB  shift, and go to state 20


State 17

    5 HEADER: HASH INCLUDE LT HEADER_FILE GT .

    $default  reduce using rule 5 (HEADER)


State 18

    6 HEADER: HASH INCLUDE DQUOTE HEADER2 HEADER_FILE . DQUOTE

    DQUOTE  shift, and go to state 21


State 19

    7 HEADER2: HEADER2 VAR . DIV

    DIV  shift, and go to state 22


State 20

    2 prm: HEADERS MAIN_TYPE MAIN LB RB . LCB $@1 BODY RCB

    LCB  shift, and go to state 23


State 21

    6 HEADER: HASH INCLUDE DQUOTE HEADER2 HEADER_FILE DQUOTE .

    $default  reduce using rule 6 (HEADER)


State 22

    7 HEADER2: HEADER2 VAR DIV .

    $default  reduce using rule 7 (HEADER2)


State 23

    2 prm: HEADERS MAIN_TYPE MAIN LB RB LCB . $@1 BODY RCB

    $default  reduce using rule 1 ($@1)

    $@1  go to state 24


State 24

    2 prm: HEADERS MAIN_TYPE MAIN LB RB LCB $@1 . BODY RCB

    PRINTF  shift, and go to state 25
    INT     shift, and go to state 26
    CHAR    shift, and go to state 27
    FLOAT   shift, and go to state 28
    DOUBLE  shift, and go to state 29

    BODY                    go to state 30
    DECLARATION_STATEMENTS  go to state 31
    DATA_TYPE               go to state 32
    WRITE_STATEMENT         go to state 33


State 25

   53 WRITE_STATEMENT: PRINTF . LB Q_STRING $@9 RB SC
   55                | PRINTF . LB Q_STRING $@10 COMA VAR_LIST_OP RB SC

    LB  shift, and go to state 34


State 26

   32 DATA_TYPE: INT .

    $default  reduce using rule 32 (DATA_TYPE)


State 27

   33 DATA_TYPE: CHAR .

    $default  reduce using rule 33 (DATA_TYPE)


State 28

   34 DATA_TYPE: FLOAT .

    $default  reduce using rule 34 (DATA_TYPE)


State 29

   35 DATA_TYPE: DOUBLE .

    $default  reduce using rule 35 (DATA_TYPE)


State 30

    2 prm: HEADERS MAIN_TYPE MAIN LB RB LCB $@1 BODY . RCB

    RCB  shift, and go to state 35


State 31

   10 BODY: DECLARATION_STATEMENTS . BODY2

    LB            shift, and go to state 36
    SC            shift, and go to state 37
    IF            shift, and go to state 38
    FOR           shift, and go to state 39
    DO            shift, and go to state 40
    WHILE         shift, and go to state 41
    PRINTF        shift, and go to state 25
    SCANF         shift, and go to state 42
    AMPER         shift, and go to state 43
    MUL           shift, and go to state 44
    INT           shift, and go to state 26
    CHAR          shift, and go to state 27
    FLOAT         shift, and go to state 28
    DOUBLE        shift, and go to state 29
    VAR           shift, and go to state 45
    INT_NUMBER    shift, and go to state 46
    FLOAT_NUMBER  shift, and go to state 47

    $default  reduce using rule 11 (BODY2)

    BODY2                   go to state 48
    DECLARATION_STATEMENTS  go to state 49
    DATA_TYPE               go to state 32
    PROGRAM_STATEMENTS      go to state 50
    WRITE_STATEMENT         go to state 33
    READ_STATEMENT          go to state 51
    CONDITIONAL_STATEMENTS  go to state 52
    IF_STATEMENT            go to state 53
    ASSIGNMENT_STATEMENT    go to state 54
    A_EXPN                  go to state 55
    ARRAY_ACCESS            go to state 56
    INCR_DCR_EXPN           go to state 57


State 32

   14 DECLARATION_STATEMENTS: DATA_TYPE . VAR_LIST SC

    MUL  shift, and go to state 58
    VAR  shift, and go to state 59

    VAR_LIST           go to state 60
    VAR_LIST2          go to state 61
    PTR_VAR            go to state 62
    PTR_DEPTH          go to state 63
    ARRAY_DECLARATION  go to state 64


State 33

   15 DECLARATION_STATEMENTS: WRITE_STATEMENT .

    $default  reduce using rule 15 (DECLARATION_STATEMENTS)


State 34

   53 WRITE_STATEMENT: PRINTF LB . Q_STRING $@9 RB SC
   55                | PRINTF LB . Q_STRING $@10 COMA VAR_LIST_OP RB SC

    Q_STRING  shift, and go to state 65


State 35

    2 prm: HEADERS MAIN_TYPE MAIN LB RB LCB $@1 BODY RCB .

    $default  reduce using rule 2 (prm)


State 36

   43 PROGRAM_STATEMENTS: LB . LOGICAL_EXPN RB QMARK LCB $@2 BODY2 RCB $@3 COLON LCB $@4 BODY2 RCB
   92 A_EXPN: LB . A_EXPN RB

    LB            shift, and go to state 66
    AMPER         shift, and go to state 43
    NOT           shift, and go to state 67
    MUL           shift, and go to state 44
    VAR           shift, and go to state 45
    INT_NUMBER    shift, and go to state 46
    FLOAT_NUMBER  shift, and go to state 47

    LOGICAL_EXPN   go to state 68
    LOGICAL_EXPN1  go to state 69
    LOGICAL_EXPN2  go to state 70
    A_EXPN         go to state 71
    ARRAY_ACCESS   go to state 56
    INCR_DCR_EXPN  go to state 72


State 37

   37 PROGRAM_STATEMENTS: SC .

    $default  reduce using rule 37 (PROGRAM_STATEMENTS)


State 38

   67 IF_STATEMENT: IF . LB LOGICAL_EXPN RB LCB $@12 BODY2 RCB

    LB  shift, and go to state 73


State 39

   51 PROGRAM_STATEMENTS: FOR . LB ASSIGNMENT_STATEMENT SC LOGICAL_EXPN SC INCR_DCR_EXPN RB LCB $@8 BODY2 RCB

    LB  shift, and go to state 74


State 40

   49 PROGRAM_STATEMENTS: DO . LCB $@6 BODY2 RCB $@7 WHILE LB LOGICAL_EXPN RB SC

    LCB  shift, and go to state 75


State 41

   46 PROGRAM_STATEMENTS: WHILE . LB LOGICAL_EXPN RB LCB $@5 BODY2 RCB

    LB  shift, and go to state 76


State 42

   59 READ_STATEMENT: SCANF . LB Q_STRING $@11 COMA VAR_LIST_IP RB SC

    LB  shift, and go to state 77


State 43

   99 A_EXPN: AMPER . A_EXPN

    LB            shift, and go to state 78
    AMPER         shift, and go to state 43
    MUL           shift, and go to state 44
    VAR           shift, and go to state 45
    INT_NUMBER    shift, and go to state 46
    FLOAT_NUMBER  shift, and go to state 47

    A_EXPN         go to state 79
    ARRAY_ACCESS   go to state 56
    INCR_DCR_EXPN  go to state 72


State 44

   97 A_EXPN: MUL . A_EXPN

    LB            shift, and go to state 78
    AMPER         shift, and go to state 43
    MUL           shift, and go to state 44
    VAR           shift, and go to state 45
    INT_NUMBER    shift, and go to state 46
    FLOAT_NUMBER  shift, and go to state 47

    A_EXPN         go to state 80
    ARRAY_ACCESS   go to state 56
    INCR_DCR_EXPN  go to state 72


State 45

   94 A_EXPN: VAR .
  101 ARRAY_ACCESS: VAR . LSQRB A_EXPN RSQRB

    LSQRB  shift, and go to state 81

    $default  reduce using rule 94 (A_EXPN)


State 46

   95 A_EXPN: INT_NUMBER .

    $default  reduce using rule 95 (A_EXPN)


State 47

   96 A_EXPN: FLOAT_NUMBER .

    $default  reduce using rule 96 (A_EXPN)


State 48

   10 BODY: DECLARATION_STATEMENTS BODY2 .

    $default  reduce using rule 10 (BODY)


State 49

   12 BODY2: DECLARATION_STATEMENTS . BODY2

    LB            shift, and go to state 36
    SC            shift, and go to state 37
    IF            shift, and go to state 38
    FOR           shift, and go to state 39
    DO            shift, and go to state 40
    WHILE         shift, and go to state 41
    PRINTF        shift, and go to state 25
    SCANF         shift, and go to state 42
    AMPER         shift, and go to state 43
    MUL           shift, and go to state 44
    INT           shift, and go to state 26
    CHAR          shift, and go to state 27
    FLOAT         shift, and go to state 28
    DOUBLE        shift, and go to state 29
    VAR           shift, and go to state 45
    INT_NUMBER    shift, and go to state 46
    FLOAT_NUMBER  shift, and go to state 47

    $default  reduce using rule 11 (BODY2)

    BODY2                   go to state 82
    DECLARATION_STATEMENTS  go to state 49
    DATA_TYPE               go to state 32
    PROGRAM_STATEMENTS      go to state 50
    WRITE_STATEMENT         go to state 33
    READ_STATEMENT          go to state 51
    CONDITIONAL_STATEMENTS  go to state 52
    IF_STATEMENT            go to state 53
    ASSIGNMENT_STATEMENT    go to state 54
    A_EXPN                  go to state 55
    ARRAY_ACCESS            go to state 56
    INCR_DCR_EXPN           go to state 57


State 50

   13 BODY2: PROGRAM_STATEMENTS . BODY2

    LB            shift, and go to state 36
    SC            shift, and go to state 37
    IF            shift, and go to state 38
    FOR           shift, and go to state 39
    DO            shift, and go to state 40
    WHILE         shift, and go to state 41
    PRINTF        shift, and go to state 25
    SCANF         shift, and go to state 42
    AMPER         shift, and go to state 43
    MUL           shift, and go to state 44
    INT           shift, and go to state 26
    CHAR          shift, and go to state 27
    FLOAT         shift, and go to state 28
    DOUBLE        shift, and go to state 29
    VAR           shift, and go to state 45
    INT_NUMBER    shift, and go to state 46
    FLOAT_NUMBER  shift, and go to state 47

    $default  reduce using rule 11 (BODY2)

    BODY2                   go to state 83
    DECLARATION_STATEMENTS  go to state 49
    DATA_TYPE               go to state 32
    PROGRAM_STATEMENTS      go to state 50
    WRITE_STATEMENT         go to state 33
    READ_STATEMENT          go to state 51
    CONDITIONAL_STATEMENTS  go to state 52
    IF_STATEMENT            go to state 53
    ASSIGNMENT_STATEMENT    go to state 54
    A_EXPN                  go to state 55
    ARRAY_ACCESS            go to state 56
    INCR_DCR_EXPN           go to state 57


State 51

   38 PROGRAM_STATEMENTS: READ_STATEMENT .

    $default  reduce using rule 38 (PROGRAM_STATEMENTS)


State 52

   44 PROGRAM_STATEMENTS: CONDITIONAL_STATEMENTS .

    $default  reduce using rule 44 (PROGRAM_STATEMENTS)


State 53

   62 CONDITIONAL_STATEMENTS: IF_STATEMENT .
   63                       | IF_STATEMENT . ELSE_STATEMENT
   64                       | IF_STATEMENT . ELSE_IF_STATEMENT
   65                       | IF_STATEMENT . ELSE_IF_STATEMENT ELSE_STATEMENT

    ELSE_IF  shift, and go to state 84
    ELSE     shift, and go to state 85

    $default  reduce using rule 62 (CONDITIONAL_STATEMENTS)

    ELSE_IF_STATEMENT  go to state 86
    ELSE_STATEMENT     go to state 87


State 54

   36 PROGRAM_STATEMENTS: ASSIGNMENT_STATEMENT . SC

    SC  shift, and go to state 88


State 55

   74 ASSIGNMENT_STATEMENT: A_EXPN . EQ A_EXPN
   90 A_EXPN: A_EXPN . OPR_PREC1 A_EXPN
   91       | A_EXPN . OPR_PREC2 A_EXPN
  102 INCR_DCR_EXPN: A_EXPN . UNARY_OPERATORS

    EQ      shift, and go to state 89
    PLUS    shift, and go to state 90
    MINUS   shift, and go to state 91
    MUL     shift, and go to state 92
    DIV     shift, and go to state 93
    MOD     shift, and go to state 94
    EXP     shift, and go to state 95
    UPLUS   shift, and go to state 96
    UMINUS  shift, and go to state 97

    UNARY_OPERATORS  go to state 98
    OPR_PREC1        go to state 99
    OPR_PREC2        go to state 100


State 56

   98 A_EXPN: ARRAY_ACCESS .
  100 ARRAY_ACCESS: ARRAY_ACCESS . LSQRB A_EXPN RSQRB

    LSQRB  shift, and go to state 101

    $default  reduce using rule 98 (A_EXPN)


State 57

   39 PROGRAM_STATEMENTS: INCR_DCR_EXPN . SC
   93 A_EXPN: INCR_DCR_EXPN .

    SC  shift, and go to state 102

    $default  reduce using rule 93 (A_EXPN)


State 58

   26 PTR_DEPTH: MUL . PTR_DEPTH
   27          | MUL .

    MUL  shift, and go to state 58

    $default  reduce using rule 27 (PTR_DEPTH)

    PTR_DEPTH  go to state 103


State 59

   16 VAR_LIST: VAR . COMA VAR_LIST
   20         | VAR .
   24 VAR_LIST2: VAR . EQ A_EXPN
   28 ARRAY_DECLARATION: VAR . ARRAY_SIZE

    LSQRB  shift, and go to state 104
    COMA   shift, and go to state 105
    EQ     shift, and go to state 106

    $default  reduce using rule 20 (VAR_LIST)

    ARRAY_SIZE  go to state 107


State 60

   14 DECLARATION_STATEMENTS: DATA_TYPE VAR_LIST . SC

    SC  shift, and go to state 108


State 61

   19 VAR_LIST: VAR_LIST2 . COMA VAR_LIST
   23         | VAR_LIST2 .

    COMA  shift, and go to state 109

    $default  reduce using rule 23 (VAR_LIST)


State 62

   18 VAR_LIST: PTR_VAR . COMA VAR_LIST
   22         | PTR_VAR .

    COMA  shift, and go to state 110

    $default  reduce using rule 22 (VAR_LIST)


State 63

   25 PTR_VAR: PTR_DEPTH . VAR

    VAR  shift, and go to state 111


State 64

   17 VAR_LIST: ARRAY_DECLARATION . COMA VAR_LIST
   21         | ARRAY_DECLARATION .

    COMA  shift, and go to state 112

    $default  reduce using rule 21 (VAR_LIST)


State 65

   53 WRITE_STATEMENT: PRINTF LB Q_STRING . $@9 RB SC
   55                | PRINTF LB Q_STRING . $@10 COMA VAR_LIST_OP RB SC

    COMA      reduce using rule 54 ($@10)
    $default  reduce using rule 52 ($@9)

    $@9   go to state 113
    $@10  go to state 114


State 66

   80 LOGICAL_EXPN1: LB . LOGICAL_EXPN1 RB
   92 A_EXPN: LB . A_EXPN RB

    LB            shift, and go to state 66
    AMPER         shift, and go to state 43
    NOT           shift, and go to state 115
    MUL           shift, and go to state 44
    VAR           shift, and go to state 45
    INT_NUMBER    shift, and go to state 46
    FLOAT_NUMBER  shift, and go to state 47

    LOGICAL_EXPN1  go to state 116
    LOGICAL_EXPN2  go to state 70
    A_EXPN         go to state 71
    ARRAY_ACCESS   go to state 56
    INCR_DCR_EXPN  go to state 72


State 67

   75 LOGICAL_EXPN: NOT . LB LOGICAL_EXPN1 RB
   79 LOGICAL_EXPN1: NOT . LB LOGICAL_EXPN1 RB

    LB  shift, and go to state 117


State 68

   43 PROGRAM_STATEMENTS: LB LOGICAL_EXPN . RB QMARK LCB $@2 BODY2 RCB $@3 COLON LCB $@4 BODY2 RCB

    RB  shift, and go to state 118


State 69

   76 LOGICAL_EXPN: LOGICAL_EXPN1 .
   77 LOGICAL_EXPN1: LOGICAL_EXPN1 . LOGICAL_OPERATOR LOGICAL_EXPN1

    AMPER  shift, and go to state 119
    OR     shift, and go to state 120

    $default  reduce using rule 76 (LOGICAL_EXPN)

    LOGICAL_OPERATOR  go to state 121


State 70

   78 LOGICAL_EXPN1: LOGICAL_EXPN2 .

    $default  reduce using rule 78 (LOGICAL_EXPN1)


State 71

   81 LOGICAL_EXPN2: A_EXPN . COMP_OPERATOR A_EXPN
   90 A_EXPN: A_EXPN . OPR_PREC1 A_EXPN
   91       | A_EXPN . OPR_PREC2 A_EXPN
   92       | LB A_EXPN . RB
  102 INCR_DCR_EXPN: A_EXPN . UNARY_OPERATORS

    RB      shift, and go to state 122
    ET      shift, and go to state 123
    GT      shift, and go to state 124
    LT      shift, and go to state 125
    GTE     shift, and go to state 126
    LTE     shift, and go to state 127
    NE      shift, and go to state 128
    PLUS    shift, and go to state 90
    MINUS   shift, and go to state 91
    MUL     shift, and go to state 92
    DIV     shift, and go to state 93
    MOD     shift, and go to state 94
    EXP     shift, and go to state 95
    UPLUS   shift, and go to state 96
    UMINUS  shift, and go to state 97

    COMP_OPERATOR    go to state 129
    UNARY_OPERATORS  go to state 98
    OPR_PREC1        go to state 99
    OPR_PREC2        go to state 100


State 72

   93 A_EXPN: INCR_DCR_EXPN .

    $default  reduce using rule 93 (A_EXPN)


State 73

   67 IF_STATEMENT: IF LB . LOGICAL_EXPN RB LCB $@12 BODY2 RCB

    LB            shift, and go to state 66
    AMPER         shift, and go to state 43
    NOT           shift, and go to state 67
    MUL           shift, and go to state 44
    VAR           shift, and go to state 45
    INT_NUMBER    shift, and go to state 46
    FLOAT_NUMBER  shift, and go to state 47

    LOGICAL_EXPN   go to state 130
    LOGICAL_EXPN1  go to state 69
    LOGICAL_EXPN2  go to state 70
    A_EXPN         go to state 131
    ARRAY_ACCESS   go to state 56
    INCR_DCR_EXPN  go to state 72


State 74

   51 PROGRAM_STATEMENTS: FOR LB . ASSIGNMENT_STATEMENT SC LOGICAL_EXPN SC INCR_DCR_EXPN RB LCB $@8 BODY2 RCB

    LB            shift, and go to state 78
    AMPER         shift, and go to state 43
    MUL           shift, and go to state 44
    VAR           shift, and go to state 45
    INT_NUMBER    shift, and go to state 46
    FLOAT_NUMBER  shift, and go to state 47

    ASSIGNMENT_STATEMENT  go to state 132
    A_EXPN                go to state 55
    ARRAY_ACCESS          go to state 56
    INCR_DCR_EXPN         go to state 72


State 75

   49 PROGRAM_STATEMENTS: DO LCB . $@6 BODY2 RCB $@7 WHILE LB LOGICAL_EXPN RB SC

    $default  reduce using rule 47 ($@6)

    $@6  go to state 133


State 76

   46 PROGRAM_STATEMENTS: WHILE LB . LOGICAL_EXPN RB LCB $@5 BODY2 RCB

    LB            shift, and go to state 66
    AMPER         shift, and go to state 43
    NOT           shift, and go to state 67
    MUL           shift, and go to state 44
    VAR           shift, and go to state 45
    INT_NUMBER    shift, and go to state 46
    FLOAT_NUMBER  shift, and go to state 47

    LOGICAL_EXPN   go to state 134
    LOGICAL_EXPN1  go to state 69
    LOGICAL_EXPN2  go to state 70
    A_EXPN         go to state 131
    ARRAY_ACCESS   go to state 56
    INCR_DCR_EXPN  go to state 72


State 77

   59 READ_STATEMENT: SCANF LB . Q_STRING $@11 COMA VAR_LIST_IP RB SC

    Q_STRING  shift, and go to state 135


State 78

   92 A_EXPN: LB . A_EXPN RB

    LB            shift, and go to state 78
    AMPER         shift, and go to state 43
    MUL           shift, and go to state 44
    VAR           shift, and go to state 45
    INT_NUMBER    shift, and go to state 46
    FLOAT_NUMBER  shift, and go to state 47

    A_EXPN         go to state 136
    ARRAY_ACCESS   go to state 56
    INCR_DCR_EXPN  go to state 72


State 79
